# chunkops

./: CHANGELOG.md  DEPLOY.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: publish.yml
chunkops/: __init__.py  batch.py  benchmark.py  chunker.py  cli.py  models.py  provenance.py  tokenizer.py
chunkops/strategies/: __init__.py  fixed.py  recursive.py  semantic.py  structural.py
examples/: basic_usage.py  rag_pipeline.py
tests/: conftest.py  test_batch.py  test_benchmark.py  test_chunker.py  test_models.py  test_provenance.py  test_tokenizer.py
