[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chunk-optimizer"
version = "0.1.0"
description = "Semantic-aware chunking with provenance tracking for production RAG and LLM data pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "chunkops contributors" }]
requires-python = ">=3.9"
keywords = ["rag", "chunking", "llm", "nlp", "embeddings", "provenance", "data-pipelines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Core — zero heavy deps. tiktoken is lightweight and always useful.
dependencies = [
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
# pip install chunkops[semantic]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
# pip install chunkops[all]
all = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
# pip install chunkops[dev]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
chunkops = "chunkops.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/chunkops"
Issues = "https://github.com/yourusername/chunkops/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunkops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
